--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
   <body>
-
+    <header>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/drones">View all drones</a></li>
+        <li><a href="/drones/create">Create new drone</a></li>
+      </ul>
+    </header>
     {{{body}}}
 
     <script src="/js/script.js"></script>
