--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,13 @@
 <h2>Create a new drone</h2>
+<form action="/drones/create" method="post">
+  <label for="name-input">Name:</label>
+  <input type="text" name="name" />
+
+  <label for="propellers-input">Numbers of propellers:</label>
+  <input type="number" name="propellers" />
+
+  <label for="speed-input">Speed:</label>
+  <input type="number" name="speed" />
+  
+  <button type="submit">Submit</button>
+</form>
