--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,11 @@
 <h2>Available drones</h2>
+{{#each results}}
+  <h1>{{name}}</h1>
+  <h3>{{propellers}}</h3>
+  <h5>{{maxSpeed}}</h5>
+  <a href="/drones/{{_id}}/edit"><button>Edit drone</button></a>
+
+  <form action="/drones/{{_id}}/delete" method="post">
+    <button type="submit">Delete this user</button>
+  </form>
+{{/each}}
